# mkshot-z

./: .gitignore  CMakeLists.txt  CREDITS  LICENSE  README.md  TODO  TODO.md  conanfile.py  meson.build  meson_options.txt  modshot.json
cmake/: EmbedAssets.cmake
embed/: CMakeLists.txt
embed/scripts/: rgss3.rb
embed/shaders/: bicubic.frag  bitmap-blit.frag  blur-h.vert  blur-v.vert  blur.frag  common.hpp  flash-map.frag  flat-color.frag  gray.frag  hue.frag  lanczos3.frag  minimal.vert  obscured.frag  plane.frag  simple-alpha-uni.frag  simple-alpha.frag  simple-color.frag  simple-color.vert  simple-matrix.vert  simple.frag  simple.vert  sprite.frag  sprite.vert  tilemap-vx.vert  tilemap.frag  tilemap.vert  trans-simple.frag  trans.frag  xbrz.frag
linux/: Makefile  install.sh  meson.build
shader/: meson.build
src/: CMakeLists.txt  config.cpp  config.h  main.cpp  meson.build
src/binding/: audio.cpp  binding.hpp  bitmap.cpp  cusl.cpp  disposable.hpp  etc.cpp  flashable.hpp  font.cpp  fs.cpp  gfx.cpp  http.cpp  input.cpp  mri-win32.hpp  mri.cpp  plane.cpp  rb_audio.cpp  rb_bitmap.cpp  rb_disposable.hpp  rb_etc.cpp  rb_flashable.hpp  rb_font.cpp  rb_fs.cpp  rb_gfx.cpp  rb_input.cpp  rb_plane.cpp  rb_serializable.hpp  rb_sprite.cpp  rb_steam.cpp  rb_table.cpp  rb_tilemap-vx.cpp  rb_tilemap.cpp  rb_util.cpp  rb_viewport.cpp  rb_viewport.hpp  rb_window-vx.cpp  rb_window.cpp  rgss.cpp  scene.hpp  serializable.hpp  sprite.cpp  (+11 more)
src/binding/oneshot/: journal.cpp  niko.cpp  oneshot.cpp  rb_journal.cpp  rb_oneshot.cpp  rb_wallpaper.cpp  wallpaper.cpp
src/binding/scripts/: module-rgss1.rb  module-rgss2.rb  module-rgss3.rb
src/core/: config.cpp  config.hpp  event-thread.cpp  event-thread.hpp  settings-menu.cpp  settings-menu.hpp  shared-state.cpp  shared-state.hpp
src/core/audio/: al-data-source.hpp  al-stream.cpp  al-stream.hpp  al-util.hpp  aldata-source.hpp  audio.cpp  audio.hpp  sdl-sound-source.cpp  sdl_sound-source.cpp  sound-emitter.cpp  sound-emitter.hpp  stream.cpp  stream.hpp  vorbis-source.cpp
src/core/etc/: etc-internal.hpp  etc.cpp  etc.hpp  table.cpp  table.hpp
src/core/fs/: fs-apple.mm  fs-impl-apple.mm  fs-impl.cpp  fs-impl.hpp  fs.cpp  fs.hpp
src/core/gfx/: autotiles-vx.cpp  autotiles.cpp  bitmap.cpp  bitmap.hpp  etc-internal.hpp  etc.cpp  etc.hpp  flashable.hpp  font.cpp  font.hpp  gfx.cpp  gfx.hpp  gl-debug.cpp  gl-debug.hpp  gl-fun.cpp  gl-fun.hpp  gl-meta.cpp  gl-meta.hpp  gl-quad-array.hpp  gl-quad.hpp  gl-scene.cpp  gl-scene.hpp  gl-shader.cpp  gl-shader.hpp  gl-state.cpp  gl-state.hpp  gl-texpool.cpp  gl-texpool.hpp  gl-tileatlas-vx.cpp  gl-tileatlas-vx.hpp  gl-tileatlas.cpp  gl-tileatlas.hpp  gl-tilequad.cpp  gl-tilequad.hpp  gl-transform.hpp  gl-util.hpp  gl-vertex.cpp  gl-vertex.hpp  global-ibo.hpp  plane.cpp  (+16 more)
src/core/input/: input.cpp  input.hpp  keybinds.cpp  keybinds.hpp
src/core/net/: net.cpp  net.hpp
src/core/oneshot/: apple.h  apple.mm  gnome-fun.cpp  gnome-fun.hpp  i18n.cpp  i18n.hpp  journal.cpp  journal.hpp  oneshot-apple.hpp  oneshot-apple.mm  oneshot.cpp  oneshot.hpp  wallpaper.cpp  wallpaper.hpp  xfconf-fun.cpp  xfconf-fun.hpp
src/core/steam/: steam.cpp  steam.hpp
src/core/steamshim/: child.c  mac_helpers.mm  parent.cpp
src/core/sys/: sys-apple.mm  sys-impl-apple.mm  sys-impl.cpp  sys.cpp  sys.hpp
src/display/: sprite.cpp
src/display/gl/: gl-meta.cpp  shader.cpp  shader.h
src/etc/: etc.h
src/net/: net.cpp
src/util/: boost-hash.hpp  dbg-writer.hpp  disposable.hpp  encoding.hpp  exception.hpp  ini-config.cpp  ini-config.hpp  intru-list.hpp  json5pp.hpp  sdl.hpp  serial.hpp  serializable.hpp  string.hpp  util.hpp  win-console.cpp  win-console.hpp  xdg-user-dirs.cpp  xdg-user-dirs.hpp
windows/: Makefile  install.sh  meson.build
